<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <Button
       android:id="@+id/btn_load_image"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="20dp"
       android:background="@drawable/custom_button"
       android:text="@string/load_image"
       android:textAllCaps="false"
       android:textColor="#FFFFFF"
       app:layout_constraintBottom_toTopOf="@+id/tv_output"
       app:layout_constraintEnd_toStartOf="@id/guideline2"
       app:layout_constraintHorizontal_bias="0.525"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="1.0"
       tools:ignore="TextContrastCheck" />

   <ImageView
       android:id="@+id/imageView"
       android:layout_width="287dp"
       android:layout_height="280dp"
       android:layout_marginTop="224dp"
       android:contentDescription="@string/todo"
       android:src="@drawable/bird_logo"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:ignore="ImageContrastCheck" />

   <Button
       android:id="@+id/btn_capture_image"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/custom_button1"
       android:text="@string/take_image"
       android:textAllCaps="false"
       android:textColor="#4D5DFA"
       app:layout_constraintBottom_toTopOf="@+id/tv_output"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.47"
       app:layout_constraintStart_toStartOf="@id/guideline2"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.961" />

   <ImageView
       android:id="@+id/imageView2"
       android:layout_width="412dp"
       android:layout_height="220dp"
       android:contentDescription="@string/todo1"
       android:src="@drawable/mask_group_1"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0"
       tools:ignore="ImageContrastCheck" />

   <TextView
       android:id="@+id/textView1"
       android:layout_width="175dp"
       android:layout_height="32dp"
       android:layout_marginTop="28dp"
       android:fontFamily="@font/urbanist"
       android:text="@string/bird_classification"
       android:textColor="#FFFFFF"
       android:textSize="20sp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.131"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@+id/imageView2" />

   <TextView
       android:id="@+id/textView"
       android:layout_width="160dp"
       android:layout_height="31dp"
       android:layout_marginTop="16dp"
       android:layout_marginEnd="140dp"
       android:layout_marginBottom="45dp"
       android:fontFamily="@font/urbanist"
       android:text="@string/click_to_know_more"
       android:textColor="#4448AE"
       android:textSize="17sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/info"
       app:layout_constraintTop_toBottomOf="@+id/tv_output"
       app:layout_constraintVertical_bias="0.545" />

   <Button
       android:id="@+id/tv_output"
       android:layout_width="227.12dp"
       android:layout_height="48dp"
       android:background="@drawable/custom_button"
       android:text="@string/name_of_the_species"
       android:textAllCaps="false"
       android:textColor="#FFFFFF"
       android:textSize="21sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.336"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/imageView"
       app:layout_constraintVertical_bias="0.423"
       tools:ignore="TextContrastCheck" />

   <ImageView
       android:id="@+id/info"
       android:layout_width="24dp"
       android:layout_height="19dp"
       android:layout_marginStart="76dp"
       android:layout_marginEnd="3dp"
       android:layout_marginBottom="35dp"
       android:contentDescription="@string/todo2"
       android:src="@drawable/ic_baseline_info_24"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/textView"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/tv_output" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="206dp"
       android:layout_marginEnd="205dp"
       android:layout_marginBottom="731dp"
       android:orientation="vertical"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintGuide_percent="0.5"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>